# cef-capi-py

./: .gitignore  ChangeLog.md  LICENSE  ReadMe.md  pyproject.toml  requirements.txt
cef_capi/: __init__.py  app_client.py  smoke_test.py  version.py
cef_capi/linux_aarch64/: struct.py  struct.pyi
cef_capi/linux_x86_64/: struct.pyi
cef_capi/macosx_arm64/: header.py  struct.py  struct.pyi
cef_capi/macosx_x86_64/: header.py  struct.py  struct.pyi
cef_capi/win_amd64/: header.py  struct.pyi
docker/: Dockerfile  ReadMe.md  docker-compose.yml
examples/: javascript.py  screenshot.py  window_linux.py  window_win.py
examples/webpage/: script.js
tool/: ctypeslib.patch  macosx-clang-15-arm64.sh  macosx-clang-15-x86_64.sh
